# email-extractor

./: pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/classifier/: page_classifier.py
app/crawler/: domain_crawler.py  robots.py
app/extractor/: site_extractor.py
app/harvester/: csv_writer.py  email_harvester.py
