[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4>=0.0.2",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "lxml>=5.3.0",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "tldextract==5.1.2",
    "uvicorn[standard]==0.29.0",
]
